--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,14 @@ dependencies:
   flutter_webview_plugin: ^0.3.1
   http: ^0.12.0+1
   image_picker: ^0.5.0+9
-  json_annotation: ^2.0.0
+  lazy_load_scrollview: ^0.0.2
   line_icons: ^0.2.0
   location: ^2.3.0
   path_provider: ^0.4.1
   sembast: ^1.15.1
   simple_share: ^0.0.1+4
   states_rebuilder: ^0.1.4
-  url_launcher: ^5.0.2
+  # url_launcher: ^5.0.2
   video_player: ^0.10.0+2
   cupertino_icons: ^0.1.2
 
@@ -40,6 +40,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.7.0
   build_runner: ^1.2.8
+  json_annotation: ^2.0.0
   json_serializable: ^2.0.3
 
 flutter_icons:
@@ -74,6 +75,7 @@ flutter:
     - assets/images/voicesagainstcorruption_logo.png
     - assets/images/waveform.png
     - assets/images/well_done.png
+    - assets/images/vid.jpg
 
   fonts:
     - family: PlayfairDisplay
