--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  dots_indicator: ^0.0.4
   flutter:
     sdk: flutter
-  audio_recorder: ^0.0.6
-  dots_indicator: ^0.0.4
+  flutter_sound: ^1.3.7
   flutter_webview_plugin: ^0.3.1
   http: ^0.12.0+1
   image_picker: ^0.5.0+9
@@ -28,10 +28,10 @@ dependencies:
   line_icons: ^0.2.0
   location: ^2.3.0
   path_provider: ^0.4.1
+  percent_indicator: "^1.0.14"
   sembast: ^1.15.1
   simple_share: ^0.0.1+4
   states_rebuilder: ^0.1.4
-  # url_launcher: ^5.0.2
   video_player: ^0.10.0+2
   cupertino_icons: ^0.1.2
 
