--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,15 +58,10 @@ android {
 
     buildTypes {
         release {
-            // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig signingConfigs.debug
-
             signingConfig signingConfigs.release
-
-//            minifyEnabled false
-//            useProguard true
-
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            useProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
