--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.1
   http: ^0.12.0+1
   image_picker: ^0.5.0+9
-  lazy_load_scrollview: ^0.0.2
+  # lazy_load_scrollview: ^0.0.2
   line_icons: ^0.2.0
   location: ^2.3.0
   path_provider: ^0.4.1
