--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,10 @@ dependencies:
   flutter_webview_plugin: ^0.3.1
   http: ^0.12.0+1
   image_picker: ^0.5.0+9
-  # lazy_load_scrollview: ^0.0.2
+  lazy_load_scrollview: ^0.0.2
   line_icons: ^0.2.0
   location: ^2.3.0
+  mfsao: ^0.1.3
   path_provider: ^0.4.1
   percent_indicator: "^1.0.14"
   permission_handler: ^3.0.0
