--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   dots_indicator: ^0.0.4
   flutter:
     sdk: flutter
+  # flutter_ffmpeg:
+  #   git:
+  #     url: git://github.com/tanersener/flutter-ffmpeg.git
+  #     ref: development
+  #     path: packages/flutter_ffmpeg_https-gpl_lts
   flutter_sound: ^1.3.7
   flutter_webview_plugin: ^0.3.1
   http: ^0.12.0+1
