--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_svg: ^0.13.1
   flutter_webview_plugin: 0.3.1
   dio: ^2.1.16
+  # image_cropper: ^1.0.2
   image_picker: ^0.5.0+9
   intl: ^0.15.6
   lazy_load_scrollview: ^0.0.2
