--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,14 @@ dependencies:
   flutter:
     sdk: flutter
   auto_size_text: ^2.1.0
-  flutter_luban: ^0.1.6+1
+  flutter_luban: ^0.1.7+1
   flutter_parsed_text: ^1.1.1
   flutter_sound: ^1.4.2
   flutter_svg: ^0.13.1
-  flutter_webview_plugin: 0.3.1
+  # flutter_webview_plugin: 0.3.1
   dio: ^2.1.16
-  # image_cropper: ^1.0.2
-  image_picker: ^0.5.0+9
+  image_cropper: ^1.1.0
+  image_picker: ^0.6.1+8
   intl: ^0.15.6
   lazy_load_scrollview: ^0.0.2
   line_icons: ^0.2.0
